# cascadebench

./: .gitignore  LICENSE  README.md  config.example.py  pyproject.toml
.github/workflows/: ci.yml
cascadebench/: README.md  __init__.py  __main__.py  attack.py  cli.py  detect.py  evaluate.py  experiments.py  features.py  graph.py  models.py  plot_cb.py  search.py  stats.py  topology.py
cascadebench/tests/: test_features.py  test_smoke.py
data/: org_graph.py  twin_generator.py
docs/: make_readme_figures.py
graph/: build_layers.py  build_osint_overlay.py  build_temporal_overlay.py
paper/: README.md  abstract.tex  conclusion.tex  discussion.tex  introduction.tex  main.tex  methodology.tex  refs.bib  related_work.tex  results.tex
